src/vexp_parser-sm.output
Grammar

    0 $accept: expression $end

    1 expression: primary
    2           | unary_operator attribute_instances primary
    3           | expression AT attribute_instances expression
    4           | expression PLUS attribute_instances expression
    5           | expression MINUS attribute_instances expression
    6           | expression STAR attribute_instances expression
    7           | expression DIV attribute_instances expression
    8           | expression MOD attribute_instances expression
    9           | expression L_EQ attribute_instances expression
   10           | expression L_NEQ attribute_instances expression
   11           | expression C_EQ attribute_instances expression
   12           | expression C_NEQ attribute_instances expression
   13           | expression L_AND attribute_instances expression
   14           | expression L_OR attribute_instances expression
   15           | expression POW attribute_instances expression
   16           | expression LT attribute_instances expression
   17           | expression LTE attribute_instances expression
   18           | expression GT attribute_instances expression
   19           | expression GTE attribute_instances expression
   20           | expression B_AND attribute_instances expression
   21           | expression B_OR attribute_instances expression
   22           | expression B_XOR attribute_instances expression
   23           | expression B_NOR attribute_instances expression
   24           | expression B_NAND attribute_instances expression
   25           | expression B_EQU attribute_instances expression
   26           | expression LSR attribute_instances expression
   27           | expression LSL attribute_instances expression
   28           | expression ASR attribute_instances expression
   29           | expression ASL attribute_instances expression
   30           | conditional_expression
   31           | function_call

   32 conditional_expression: expression TERNARY attribute_instances expression COLON expression

   33 primary: number
   34        | hierarchical_identifier
   35        | primary sq_bracket_expression
   36        | string
   37        | hierarchical_identifier_special_name
   38        | concatenation
   39        | multiple_concatenation
   40        | OPEN_BRACKET expression CLOSE_BRACKET

   41 hierarchical_identifier_special_name: HASH SIMPLE_ID HASH

   42 concatenation: OPEN_SQ_BRACE expressions CLOSE_SQ_BRACE

   43 multiple_concatenation: OPEN_SQ_BRACE expression concatenation CLOSE_SQ_BRACE

   44 number: NUM_REAL
   45       | BIN_BASE BIN_VALUE
   46       | HEX_BASE HEX_VALUE
   47       | OCT_BASE OCT_VALUE
   48       | DEC_BASE UNSIGNED_NUMBER
   49       | UNSIGNED_NUMBER BIN_BASE BIN_VALUE
   50       | UNSIGNED_NUMBER HEX_BASE HEX_VALUE
   51       | UNSIGNED_NUMBER OCT_BASE OCT_VALUE
   52       | UNSIGNED_NUMBER DEC_BASE UNSIGNED_NUMBER
   53       | unsigned_number

   54 unsigned_number: UNSIGNED_NUMBER

   55 function_call: hierarchical_identifier attribute_instances OPEN_BRACKET expressions CLOSE_BRACKET
   56              | hierarchical_identifier attribute_instances OPEN_BRACKET CLOSE_BRACKET

   57 expressions: expression
   58            | expressions COMMA expression

   59 sq_bracket_expression: OPEN_SQ_BRACKET expression CLOSE_SQ_BRACKET
   60                      | OPEN_SQ_BRACKET expression COLON expression CLOSE_SQ_BRACKET
   61                      | OPEN_SQ_BRACKET expression IDX_PRT_SEL_PLUS expression CLOSE_SQ_BRACKET
   62                      | OPEN_SQ_BRACKET expression IDX_PRT_SEL_MINUS expression CLOSE_SQ_BRACKET

   63 string: STRING

   64 attribute_instances: %empty
   65                    | list_of_attribute_instances

   66 list_of_attribute_instances: ATTRIBUTE_START attr_specs ATTRIBUTE_END
   67                            | ATTRIBUTE_START attr_specs ATTRIBUTE_END list_of_attribute_instances

   68 attr_specs: %empty
   69           | attr_name EQ expression
   70           | attr_name EQ expression COMMA attr_specs

   71 attr_name: identifier

   72 hierarchical_identifier: simple_identifier
   73                        | hierarchical_identifier DOT simple_identifier
   74                        | hierarchical_identifier DOT escaped_identifier

   75 identifier: simple_identifier
   76           | escaped_identifier
   77           | text_macro_usage

   78 escaped_identifier: ESCAPED_ID

   79 simple_identifier: SIMPLE_ID

   80 text_macro_usage: MACRO_IDENTIFIER

   81 unary_operator: PLUS
   82               | MINUS
   83               | L_NEG
   84               | B_NEG
   85               | B_AND
   86               | B_NAND
   87               | B_OR
   88               | B_NOR
   89               | B_XOR
   90               | B_EQU


Terminals, with rules where they appear

$end (0) 0
error (256)
STAR (258) 6
PLUS (259) 4 81
MINUS (260) 5 82
ASL (261) 29
ASR (262) 28
LSL (263) 27
LSR (264) 26
DIV (265) 7
POW (266) 15
MOD (267) 8
GTE (268) 19
LTE (269) 17
GT (270) 18
LT (271) 16
L_NEG (272) 83
L_AND (273) 13
L_OR (274) 14
C_EQ (275) 11
L_EQ (276) 9
C_NEQ (277) 12
L_NEQ (278) 10
B_NEG (279) 84
B_AND (280) 20 85
B_OR (281) 21 87
B_XOR (282) 22 89
B_EQU (283) 25 90
B_NAND (284) 24 86
B_NOR (285) 23 88
TERNARY (286) 32
AT (287) 3
OPEN_SQ_BRACKET (288) 59 60 61 62
CLOSE_SQ_BRACKET (289) 59 60 61 62
OPEN_BRACKET (290) 40 55 56
CLOSE_BRACKET (291) 40 55 56
HASH (292) 41
OPEN_SQ_BRACE (293) 42 43
CLOSE_SQ_BRACE (294) 42 43
COMMA (295) 58 70
COLON (296) 32 60
BIN_BASE (297) 45 49
HEX_BASE (298) 46 50
OCT_BASE (299) 47 51
DEC_BASE (300) 48 52
IDX_PRT_SEL_PLUS (301) 61
IDX_PRT_SEL_MINUS (302) 62
ATTRIBUTE_START (303) 66 67
ATTRIBUTE_END (304) 66 67
EQ (305) 69 70
DOT (306) 73 74
SIMPLE_ID (307) 41 79
ESCAPED_ID (308) 78
MACRO_IDENTIFIER (309) 80
NUM_REAL (310) 44
BIN_VALUE (311) 45 49
HEX_VALUE (312) 46 50
OCT_VALUE (313) 47 51
UNSIGNED_NUMBER (314) 48 49 50 51 52 54
STRING (315) 63


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
expression (62)
    on left: 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 27 28 29 30 31, on right: 0 3 4 5 6 7 8 9 10 11
    12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 32 40 43
    57 58 59 60 61 62 69 70
primary (63)
    on left: 33 34 35 36 37 38 39 40, on right: 1 2 35
conditional_expression (64)
    on left: 32, on right: 30
number (65)
    on left: 44 45 46 47 48 49 50 51 52 53, on right: 33
function_call (66)
    on left: 55 56, on right: 31
concatenation (67)
    on left: 42, on right: 38 43
multiple_concatenation (68)
    on left: 43, on right: 39
unary_operator (69)
    on left: 81 82 83 84 85 86 87 88 89 90, on right: 2
attribute_instances (70)
    on left: 64 65, on right: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16
    17 18 19 20 21 22 23 24 25 26 27 28 29 32 55 56
list_of_attribute_instances (71)
    on left: 66 67, on right: 65 67
attr_specs (72)
    on left: 68 69 70, on right: 66 67 70
unsigned_number (73)
    on left: 54, on right: 53
hierarchical_identifier_special_name (74)
    on left: 41, on right: 37
text_macro_usage (75)
    on left: 80, on right: 77
identifier (76)
    on left: 75 76 77, on right: 71
simple_identifier (77)
    on left: 79, on right: 72 73 75
escaped_identifier (78)
    on left: 78, on right: 74 76
attr_name (79)
    on left: 71, on right: 69 70
string (80)
    on left: 63, on right: 36
hierarchical_identifier (81)
    on left: 72 73 74, on right: 34 55 56 73 74
expressions (82)
    on left: 57 58, on right: 42 55 58
sq_bracket_expression (83)
    on left: 59 60 61 62, on right: 35


State 0

    0 $accept: . expression $end

    PLUS             shift, and go to state 1
    MINUS            shift, and go to state 2
    L_NEG            shift, and go to state 3
    B_NEG            shift, and go to state 4
    B_AND            shift, and go to state 5
    B_OR             shift, and go to state 6
    B_XOR            shift, and go to state 7
    B_EQU            shift, and go to state 8
    B_NAND           shift, and go to state 9
    B_NOR            shift, and go to state 10
    OPEN_BRACKET     shift, and go to state 11
    HASH             shift, and go to state 12
    OPEN_SQ_BRACE    shift, and go to state 13
    BIN_BASE         shift, and go to state 14
    HEX_BASE         shift, and go to state 15
    OCT_BASE         shift, and go to state 16
    DEC_BASE         shift, and go to state 17
    SIMPLE_ID        shift, and go to state 18
    NUM_REAL         shift, and go to state 19
    UNSIGNED_NUMBER  shift, and go to state 20
    STRING           shift, and go to state 21

    expression                            go to state 22
    primary                               go to state 23
    conditional_expression                go to state 24
    number                                go to state 25
    function_call                         go to state 26
    concatenation                         go to state 27
    multiple_concatenation                go to state 28
    unary_operator                        go to state 29
    unsigned_number                       go to state 30
    hierarchical_identifier_special_name  go to state 31
    simple_identifier                     go to state 32
    string                                go to state 33
    hierarchical_identifier               go to state 34


State 1

   81 unary_operator: PLUS .

    $default  reduce using rule 81 (unary_operator)


State 2

   82 unary_operator: MINUS .

    $default  reduce using rule 82 (unary_operator)


State 3

   83 unary_operator: L_NEG .

    $default  reduce using rule 83 (unary_operator)


State 4

   84 unary_operator: B_NEG .

    $default  reduce using rule 84 (unary_operator)


State 5

   85 unary_operator: B_AND .

    $default  reduce using rule 85 (unary_operator)


State 6

   87 unary_operator: B_OR .

    $default  reduce using rule 87 (unary_operator)


State 7

   89 unary_operator: B_XOR .

    $default  reduce using rule 89 (unary_operator)


State 8

   90 unary_operator: B_EQU .

    $default  reduce using rule 90 (unary_operator)


State 9

   86 unary_operator: B_NAND .

    $default  reduce using rule 86 (unary_operator)


State 10

   88 unary_operator: B_NOR .

    $default  reduce using rule 88 (unary_operator)


State 11

   40 primary: OPEN_BRACKET . expression CLOSE_BRACKET

    PLUS             shift, and go to state 1
    MINUS            shift, and go to state 2
    L_NEG            shift, and go to state 3
    B_NEG            shift, and go to state 4
    B_AND            shift, and go to state 5
    B_OR             shift, and go to state 6
    B_XOR            shift, and go to state 7
    B_EQU            shift, and go to state 8
    B_NAND           shift, and go to state 9
    B_NOR            shift, and go to state 10
    OPEN_BRACKET     shift, and go to state 11
    HASH             shift, and go to state 12
    OPEN_SQ_BRACE    shift, and go to state 13
    BIN_BASE         shift, and go to state 14
    HEX_BASE         shift, and go to state 15
    OCT_BASE         shift, and go to state 16
    DEC_BASE         shift, and go to state 17
    SIMPLE_ID        shift, and go to state 18
    NUM_REAL         shift, and go to state 19
    UNSIGNED_NUMBER  shift, and go to state 20
    STRING           shift, and go to state 21

    expression                            go to state 35
    primary                               go to state 23
    conditional_expression                go to state 24
    number                                go to state 25
    function_call                         go to state 26
    concatenation                         go to state 27
    multiple_concatenation                go to state 28
    unary_operator                        go to state 29
    unsigned_number                       go to state 30
    hierarchical_identifier_special_name  go to state 31
    simple_identifier                     go to state 32
    string                                go to state 33
    hierarchical_identifier               go to state 34


State 12

   41 hierarchical_identifier_special_name: HASH . SIMPLE_ID HASH

    SIMPLE_ID  shift, and go to state 36


State 13

   42 concatenation: OPEN_SQ_BRACE . expressions CLOSE_SQ_BRACE
   43 multiple_concatenation: OPEN_SQ_BRACE . expression concatenation CLOSE_SQ_BRACE

    PLUS             shift, and go to state 1
    MINUS            shift, and go to state 2
    L_NEG            shift, and go to state 3
    B_NEG            shift, and go to state 4
    B_AND            shift, and go to state 5
    B_OR             shift, and go to state 6
    B_XOR            shift, and go to state 7
    B_EQU            shift, and go to state 8
    B_NAND           shift, and go to state 9
    B_NOR            shift, and go to state 10
    OPEN_BRACKET     shift, and go to state 11
    HASH             shift, and go to state 12
    OPEN_SQ_BRACE    shift, and go to state 13
    BIN_BASE         shift, and go to state 14
    HEX_BASE         shift, and go to state 15
    OCT_BASE         shift, and go to state 16
    DEC_BASE         shift, and go to state 17
    SIMPLE_ID        shift, and go to state 18
    NUM_REAL         shift, and go to state 19
    UNSIGNED_NUMBER  shift, and go to state 20
    STRING           shift, and go to state 21

    expression                            go to state 37
    primary                               go to state 23
    conditional_expression                go to state 24
    number                                go to state 25
    function_call                         go to state 26
    concatenation                         go to state 27
    multiple_concatenation                go to state 28
    unary_operator                        go to state 29
    unsigned_number                       go to state 30
    hierarchical_identifier_special_name  go to state 31
    simple_identifier                     go to state 32
    string                                go to state 33
    hierarchical_identifier               go to state 34
    expressions                           go to state 38


State 14

   45 number: BIN_BASE . BIN_VALUE

    BIN_VALUE  shift, and go to state 39


State 15

   46 number: HEX_BASE . HEX_VALUE

    HEX_VALUE  shift, and go to state 40


State 16

   47 number: OCT_BASE . OCT_VALUE

    OCT_VALUE  shift, and go to state 41


State 17

   48 number: DEC_BASE . UNSIGNED_NUMBER

    UNSIGNED_NUMBER  shift, and go to state 42


State 18

   79 simple_identifier: SIMPLE_ID .

    $default  reduce using rule 79 (simple_identifier)


State 19

   44 number: NUM_REAL .

    $default  reduce using rule 44 (number)


State 20

   49 number: UNSIGNED_NUMBER . BIN_BASE BIN_VALUE
   50       | UNSIGNED_NUMBER . HEX_BASE HEX_VALUE
   51       | UNSIGNED_NUMBER . OCT_BASE OCT_VALUE
   52       | UNSIGNED_NUMBER . DEC_BASE UNSIGNED_NUMBER
   54 unsigned_number: UNSIGNED_NUMBER .

    BIN_BASE  shift, and go to state 43
    HEX_BASE  shift, and go to state 44
    OCT_BASE  shift, and go to state 45
    DEC_BASE  shift, and go to state 46

    $default  reduce using rule 54 (unsigned_number)


State 21

   63 string: STRING .

    $default  reduce using rule 63 (string)


State 22

    0 $accept: expression . $end
    3 expression: expression . AT attribute_instances expression
    4           | expression . PLUS attribute_instances expression
    5           | expression . MINUS attribute_instances expression
    6           | expression . STAR attribute_instances expression
    7           | expression . DIV attribute_instances expression
    8           | expression . MOD attribute_instances expression
    9           | expression . L_EQ attribute_instances expression
   10           | expression . L_NEQ attribute_instances expression
   11           | expression . C_EQ attribute_instances expression
   12           | expression . C_NEQ attribute_instances expression
   13           | expression . L_AND attribute_instances expression
   14           | expression . L_OR attribute_instances expression
   15           | expression . POW attribute_instances expression
   16           | expression . LT attribute_instances expression
   17           | expression . LTE attribute_instances expression
   18           | expression . GT attribute_instances expression
   19           | expression . GTE attribute_instances expression
   20           | expression . B_AND attribute_instances expression
   21           | expression . B_OR attribute_instances expression
   22           | expression . B_XOR attribute_instances expression
   23           | expression . B_NOR attribute_instances expression
   24           | expression . B_NAND attribute_instances expression
   25           | expression . B_EQU attribute_instances expression
   26           | expression . LSR attribute_instances expression
   27           | expression . LSL attribute_instances expression
   28           | expression . ASR attribute_instances expression
   29           | expression . ASL attribute_instances expression
   32 conditional_expression: expression . TERNARY attribute_instances expression COLON expression

    $end     shift, and go to state 47
    STAR     shift, and go to state 48
    PLUS     shift, and go to state 49
    MINUS    shift, and go to state 50
    ASL      shift, and go to state 51
    ASR      shift, and go to state 52
    LSL      shift, and go to state 53
    LSR      shift, and go to state 54
    DIV      shift, and go to state 55
    POW      shift, and go to state 56
    MOD      shift, and go to state 57
    GTE      shift, and go to state 58
    LTE      shift, and go to state 59
    GT       shift, and go to state 60
    LT       shift, and go to state 61
    L_AND    shift, and go to state 62
    L_OR     shift, and go to state 63
    C_EQ     shift, and go to state 64
    L_EQ     shift, and go to state 65
    C_NEQ    shift, and go to state 66
    L_NEQ    shift, and go to state 67
    B_AND    shift, and go to state 68
    B_OR     shift, and go to state 69
    B_XOR    shift, and go to state 70
    B_EQU    shift, and go to state 71
    B_NAND   shift, and go to state 72
    B_NOR    shift, and go to state 73
    TERNARY  shift, and go to state 74
    AT       shift, and go to state 75


State 23

    1 expression: primary .
   35 primary: primary . sq_bracket_expression

    OPEN_SQ_BRACKET  shift, and go to state 76

    $default  reduce using rule 1 (expression)

    sq_bracket_expression  go to state 77


State 24

   30 expression: conditional_expression .

    $default  reduce using rule 30 (expression)


State 25

   33 primary: number .

    $default  reduce using rule 33 (primary)


State 26

   31 expression: function_call .

    $default  reduce using rule 31 (expression)


State 27

   38 primary: concatenation .

    $default  reduce using rule 38 (primary)


State 28

   39 primary: multiple_concatenation .

    $default  reduce using rule 39 (primary)


State 29

    2 expression: unary_operator . attribute_instances primary

    ATTRIBUTE_START  shift, and go to state 78

    $default  reduce using rule 64 (attribute_instances)

    attribute_instances          go to state 79
    list_of_attribute_instances  go to state 80


State 30

   53 number: unsigned_number .

    $default  reduce using rule 53 (number)


State 31

   37 primary: hierarchical_identifier_special_name .

    $default  reduce using rule 37 (primary)


State 32

   72 hierarchical_identifier: simple_identifier .

    $default  reduce using rule 72 (hierarchical_identifier)


State 33

   36 primary: string .

    $default  reduce using rule 36 (primary)


State 34

   34 primary: hierarchical_identifier .
   55 function_call: hierarchical_identifier . attribute_instances OPEN_BRACKET expressions CLOSE_BRACKET
   56              | hierarchical_identifier . attribute_instances OPEN_BRACKET CLOSE_BRACKET
   73 hierarchical_identifier: hierarchical_identifier . DOT simple_identifier
   74                        | hierarchical_identifier . DOT escaped_identifier

    ATTRIBUTE_START  shift, and go to state 78
    DOT              shift, and go to state 81

    OPEN_BRACKET  reduce using rule 64 (attribute_instances)
    $default      reduce using rule 34 (primary)

    attribute_instances          go to state 82
    list_of_attribute_instances  go to state 80


State 35

    3 expression: expression . AT attribute_instances expression
    4           | expression . PLUS attribute_instances expression
    5           | expression . MINUS attribute_instances expression
    6           | expression . STAR attribute_instances expression
    7           | expression . DIV attribute_instances expression
    8           | expression . MOD attribute_instances expression
    9           | expression . L_EQ attribute_instances expression
   10           | expression . L_NEQ attribute_instances expression
   11           | expression . C_EQ attribute_instances expression
   12           | expression . C_NEQ attribute_instances expression
   13           | expression . L_AND attribute_instances expression
   14           | expression . L_OR attribute_instances expression
   15           | expression . POW attribute_instances expression
   16           | expression . LT attribute_instances expression
   17           | expression . LTE attribute_instances expression
   18           | expression . GT attribute_instances expression
   19           | expression . GTE attribute_instances expression
   20           | expression . B_AND attribute_instances expression
   21           | expression . B_OR attribute_instances expression
   22           | expression . B_XOR attribute_instances expression
   23           | expression . B_NOR attribute_instances expression
   24           | expression . B_NAND attribute_instances expression
   25           | expression . B_EQU attribute_instances expression
   26           | expression . LSR attribute_instances expression
   27           | expression . LSL attribute_instances expression
   28           | expression . ASR attribute_instances expression
   29           | expression . ASL attribute_instances expression
   32 conditional_expression: expression . TERNARY attribute_instances expression COLON expression
   40 primary: OPEN_BRACKET expression . CLOSE_BRACKET

    STAR           shift, and go to state 48
    PLUS           shift, and go to state 49
    MINUS          shift, and go to state 50
    ASL            shift, and go to state 51
    ASR            shift, and go to state 52
    LSL            shift, and go to state 53
    LSR            shift, and go to state 54
    DIV            shift, and go to state 55
    POW            shift, and go to state 56
    MOD            shift, and go to state 57
    GTE            shift, and go to state 58
    LTE            shift, and go to state 59
    GT             shift, and go to state 60
    LT             shift, and go to state 61
    L_AND          shift, and go to state 62
    L_OR           shift, and go to state 63
    C_EQ           shift, and go to state 64
    L_EQ           shift, and go to state 65
    C_NEQ          shift, and go to state 66
    L_NEQ          shift, and go to state 67
    B_AND          shift, and go to state 68
    B_OR           shift, and go to state 69
    B_XOR          shift, and go to state 70
    B_EQU          shift, and go to state 71
    B_NAND         shift, and go to state 72
    B_NOR          shift, and go to state 73
    TERNARY        shift, and go to state 74
    AT             shift, and go to state 75
    CLOSE_BRACKET  shift, and go to state 83

